In Tools -> Options... / LibreOffice -> Paths try to edit path for My Documents or Temporary files. This opens up a Windows native path selector. Drag it around on the screen. => LibreOffice UI doesn't refresh (= it will show leftover garbage from dragging popup window) until the path selector is closed. Observed using LO 6.0.2.1 & 6.0.0.3 / Windows 7. No issue in LO 5.4.0.3. => regression Bibisected to the commit referenced below using repo bibisect-win32-6.0. Adding Cc: to Jan-Marek Glogowski, please take a look sometimes. https://cgit.freedesktop.org/libreoffice/core/commit/?id=fb4e7be5d4eac6d7c429c215e72de45ea28d86cd author Jan-Marek Glogowski <glogow@fbihome.de> 2017-10-12 16:00:42 +0200 committer Jan-Marek Glogowski <glogow@fbihome.de> 2017-10-13 16:48:32 +0200 WIN another system loop integration attempt
Jan-Marek Glogowski committed a patch related to this issue. It has been pushed to "master": http://cgit.freedesktop.org/libreoffice/core/commit/?id=1b1839d325014c6607cc1e2410b98839602ee2b2 tdf#116615 WIN process messages using Reschedule It will be available in 6.1.0. The patch should be included in the daily builds available at http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More information about daily builds can be found at: http://wiki.documentfoundation.org/Testing_Daily_Builds Affected users are encouraged to test the fix and report feedback.
A polite ping to Jan-Marek Glogowski: is this bug fixed? if so, could you please close it as RESOLVED FIXED ? Thanks
(In reply to Xisco Faulí from comment #2) > A polite ping to Jan-Marek Glogowski: is this bug fixed? if so, could you > please close it as RESOLVED FIXED ? Thanks Hi Aron Budea, Is this bug fixed? if so, could you please close it as RESOLVED FIXED ?
Yep, seems fixed in 6.1 beta1 / Windows 7, thanks Jan-Marek!