tdf#116615 WIN process messages using Reschedule

Since LO message processing loop is a little more complex then
PeekMessageW and DispatchMessageW, use Reschedule( true ) to
process all pending events. Processing all event is important,
because MsgWaitForMultipleObjects will just trigger for new
messages since its call and will ignore already pending
messages.

Which leaves the IsMTA() call. I know of the COM STA / MTA
stuff, but I don't understand how this might be related here.
The call to SHBrowseForFolderW definitly block, but we already
use multiple threads, so I don't understand, how this has
worked before...

Change-Id: Id348f26155571b3ddb31233d0bcd2c4fd2003819